# phasespace-acquisition

./: CMakeLists.txt  README.md  setup.py
config/: fake_localization.yaml  tracking.yaml
launch/: phasespace_publisher.launch
pythonsrc/phasespace_acquisition/: object_pose_publisher.py
scripts/: fake_localization.py  localization_calibration.py  msg_2_tf.py  msg_2_tf_avg_palm.py  object_translation_calibration.py  test.py
